Adding check that build has started when closing it in the config cache service (#330)